--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "ᴀɴᴏɴ ダ ᴍᴜsɪᴄ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/b8a0c1a00db3e57522b53.jpg",
+    "logo": "http://telegra.ph/file/da67bb071fac5b01a5c8d.jpg",
     "keywords": [
     "python3",
     "telegram",
