--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ᴀɴᴏɴ ダ ᴍᴜsɪᴄ",
+    "name": "ASHWANI ダ MUSIC",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "http://telegra.ph/file/da67bb071fac5b01a5c8d.jpg",
     "keywords": [
