--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ASHWANI ダ MUSIC",
+    "name": "⚡DEVIL MUSIC⚡🫧",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "http://telegra.ph/file/da67bb071fac5b01a5c8d.jpg",
+    "logo": "https://telegra.ph/file/8bfded5f818dc3c95670e.jpg",
     "keywords": [
     "python3",
     "telegram",
